tests/baselines/reference/parserES5ComputedPropertyName4.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts(1,15): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts(1,15): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts(1,16): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts (3 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
                  ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
                   ~
!!! error TS2304: Cannot find name 'e'.